# Weller-to-JBC-converter

./: .gitignore  README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: Firmware.1730318815934.pdom  Firmware.language.settings.xml
.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 0.snap  24.snap
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree  24.tree  28.tree  29.tree  30.tree  31.tree  33.tree
.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Firmware/: .cproject  .mxproject  Firmware Debug.launch  Firmware.ioc  STM32F051R8TX_FLASH.ld
Firmware/.metadata/: .log4j2.xml  version.ini
Firmware/Core/Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Firmware/Core/Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
Firmware/Debug/: Firmware.elf  Firmware.list  Firmware.map  makefile  objects.list  sources.mk
GUI/SolderingStation/: SolderingStation.sln
GUI/SolderingStation/SolderingStation/: Main.cpp  Main.h  SolderingStation.cpp  SolderingStation.vcxproj  SolderingStation.vcxproj.filters
GUI/WellerToJBCCommunication/: CMakeLists.txt  main.cpp
wxplot/plots/plottools/: plottools.h
(+1257 files in other folders)
